part3/todo-app/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-dep
  namespace: todo-ns
spec:
  replicas: 4
  selector:
    matchLabels:
      app: todo
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: restart-rate
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo-app
          image: thangnv2212/todo-app:latest
          readinessProbe:
            httpGet:
              path: /rediness
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: "200m"
              memory: "64Mi"
