part3/todo-app/manifests/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
  namespace: todo-ns
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 80 # app port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dep
  namespace: todo-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo-app
          image: thangnv2212/todo-app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-ns
spec:
  rules:
  - http:
      paths:
      - path: /todos
        backend:
          serviceName: todo-svc
          servicePort: 1234
      - path: /static
        backend:
          serviceName: todo-svc
          servicePort: 1234
