part3/todo-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-ns
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: todo-svc
          servicePort: 1234
